# Quant-Prototype

./: .dockerignore  .gitignore  Containerfile  Makefile  README.md  docker-compose.yml  podman-compose.yml  pyproject.toml  spec.md
.github/skills/python-developer/: SKILL.md
src/quant/: __init__.py  cli.py  config.py  exceptions.py  io_utils.py  types.py
src/quant/backtest/: __init__.py  run.py
src/quant/candidates/: __init__.py  export.py
src/quant/data/: __init__.py  generate.py
src/quant/experiments/: __init__.py  component_test.py  momentum_regime_checks.py
src/quant/factor_evaluation/: __init__.py  evaluate.py
src/quant/features/: __init__.py  build.py
src/quant/filters/: __init__.py  risk.py
src/quant/preprocess/: __init__.py  process.py
src/quant/report/: __init__.py  show.py
src/quant/strategy/: __init__.py  selection.py
tests/: test_component_experiments.py  test_data_generate.py  test_features.py  test_momentum_regime_checks.py  test_pipeline.py  test_preprocess.py
